<resources>
    <string name="app_name">Prumpo</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Login</string>
    <string name="profile_activity_logout">Logout</string>

    <string name="activity_authenticate_create_new_account"><![CDATA[<font color="#5a6775">Noch keinen Account?</font> <b><font color="#ffffff">Benutzerkonto erstellen</font></b>]]></string>
    <string name="activity_authenticate_back_to_login"><![CDATA[<font color="#5a6775">Zurück zum</font> <b><font color="#ffffff">Login</font></b>]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Benutzerkonto anlegen</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Prumpo</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_closed">Close navigation drawer</string>
    <string name="nav_appbar_map">Karte</string>
    <string name="nav_username">Benutzername</string>
    <string name="nav_role">Rolle</string>
    <string name="nav_appbar_contract">Versicherungen</string>
    <string name="nav_appbar_damagecases">Schadensfälle</string>
    <string name="nav_appbar_users">Kunden</string>
    <string name="nav_appbar_settings">Einstellungen</string>
    <string name="nav_appbar_about">Weitere Informationen</string>

    <string name="profile_title_app_bar">Profilansicht</string>
    <string name="profile_image_change">Profilbild ändern</string>
    <string name="profile_title">Your Name</string>
    <string name="profile_subtitle">Subtitle</string>
    <string name="profile_logout_dialog_title">Ausloggen</string>
    <string name="profile_logout_dialog_message">Wollen Sie sich wirklich ausloggen?</string>
    <string name="profile_logout_dialog_message_onchange">Wollen Sie sich wirklich ausloggen? Ihre Änderungen
        werden verworfen.</string>
    <string name="profile_leave_dialog_title">Änderungen verwerfen?</string>
    <string name="profile_leave_dialog_message">Möchten Sie Ihre Änderungen verwerfen?</string>
    <string name="profile_input_password_hint">Neues Password</string>
    <string name="profile_input_password_title">Password</string>
    <string name="profile_input_password_title_confirm">Password bestätigen</string>
    <string name="profile_input_password_hint_confirm">Neues Password bestätigen</string>
    <string name="profile_onsave_successfully">Änderungen gespeichert!</string>
    <string name="profile_onsave_notsuccessfully">Änderungen leider nicht gespeichert!</string>

    <string name="title_activity_maps">Map</string>
    <string name="damage_case_pre_policyholder">Versicherungsnehmer</string>
    <string name="map_frag_bs_contract_input_hint_damages">Absicherung</string>

    <string name="dc_fragment_search_hint">Suche …</string>

    <string name="prompt_enable_localization">Bitte Lokalisierung über GPS oder Netzwerk aktivieren.</string>

    <string name="title_activity_authentication"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--map fragment : bottom sheet -->
    <string name="map_frag_bottomsheet_close_dialog_header">Änderungen verwerfen?</string>
    <string name="map_frag_bottomsheet_dc_close_dialog_message">Möchten Sie Ihre aktuelle Schadensbestandaufnahme verwerfen?</string>
    <string name="map_frag_bottomsheet_insurance_close_dialog_message">Möchten Sie Änderungen Ihres aktuellen Versicherungsfalls verwefen?</string>
    <string name="map_frag_bottomsheet_delete_dialog_header">Löschen?</string>
    <string name="map_frag_bottomsheet_dc_delete_dialog_message">Möchten Sie den bestehenden Schadensfall löschen?</string>
    <string name="map_frag_bottomsheet_insurance_delete_dialog_message">Möchten Sie die bestehende Versicherung löschen?</string>
    <string name="map_frag_botsheet_dialog_yes">Ja</string>
    <string name="map_frag_botsheet_dialog_no">Nein</string>

    <string name="map_frag_botsheet_toolbar_title_dc">Unbenannter Schadensfall</string>
    <string name="map_frag_botsheet_toolbar_title_insurance">Unbenannter Versicherungsfall</string>

    <string name="map_frag_botsheet_menu_close">Schließen</string>
    <string name="map_frag_botsheet_menu_save_enabled_apha">1</string>
    <string name="map_frag_botsheet_menu_save_disabled_apha">0.25</string>

    <string name="map_frag_botsheet_menu_delete">Löschen</string>

    <string name="map_fab_messages_latitude">Latitude</string>
    <string name="map_fab_messages_longitude">Longitude</string>

    <string name="map_fab_no_gps">Es konnten keine Positionsdaten im Zeitrahmen von 10 Sekunden empfangen werden.</string>

    <string name="map_frag_invalid_vertex">Punkt ungültig.</string>

    <string name="map_frag_botsheet_dialog_default_header">"Bitte eingeben …"</string>
    <string name="map_frag_botsheet_dialog_positive">OK</string>
    <string name="map_frag_botsheet_dialog_negative">Abbrechen</string>

    <string name="map_frag_bottomsheet_inp_dialog_dc_title_header">Bezeichnung des Schadenfalls</string>
    <string name="map_frag_bottomsheet_inp_dialog_dc_title_hint">Bezeichnung</string>

    <string name="map_frag_bottomsheet_inp_dialog_contract_policyholder_header">Name des Versicherungsnehmers</string>
    <string name="map_frag_bottomsheet_inp_dialog_contract_policyholder_hint">Versicherungsnehmer</string>

    <string name="map_frag_bottomsheet_inp_dialog_dc_expert_header">Name des Gutachters</string>
    <string name="map_frag_bottomsheet_inp_dialog_dc_expert_hint">Gutachter</string>

    <string name="map_frag_botsheet_dialog_dc_date">Zeitpunkt des Schadens</string>
    <string name="map_frag_botsheet_dialog_dc_date_hint">Schadenszeitpunkt</string>
    <string name="map_frag_bottomsheet_date_pattern">EEE d MMM yyyy</string>

    <string name="map_frag_bottomsheet_inp_dialog_dc_location_header">Ort des Schadens</string>
    <string name="map_frag_bottomsheet_inp_dialog_dc_location_hint">Ort</string>
    <string name="map_frag_botsheet_toolbar_dc_name">Bezeichnung</string>
    <string name="map_frag_botsheet_toolbar_dc_area">Fläche</string>

    <string name="map_frag_bottomsheet_inp_dialog_insurance_title_header">Name des Versicherungsfalls</string>
    <string name="map_frag_bottomsheet_inp_dialog_insurance_title_hint">Name</string>

    <string name="title_activity_sign_up">Benutzerkonto anlegen</string>

    <string name="su_email_hint">Email</string>
    <string name="su_password_hint">Passwort</string>
    <string name="su_password_confirm_hint">Passwort bestätigen</string>
    <string name="su_signup_button">Benutzerkonto anlegen</string>
    <string name="su_name_hint">Name</string>
    <string name="su_name_last_hint">Nachname</string>
    <string name="su_name_first_hint">Vorname</string>
    <string name="map_frag_add_dialog_title">Create new …</string>
    <string name="map_frag_dialog_add_dc">Damage-Case</string>
    <string name="map_frag_dialog_add_insurance">Insurance</string>
    <string name="map_frag_dialog_add_abort">Abort</string>

    <string-array name="user_groups">
        <item>ADMIN</item>
        <item>GUTACHTER</item>
        <item>BAUER</item>
    </string-array>

    <string name="today">Heute</string>
    <string name="bottomsheet_contract_toolbar_placeholder_nr">Vers-NR:</string>
    <string name="bottomsheet_dc_toolbar_placeholder_nr">Schaden-NR:</string>
    <string name="bottomsheet_contract_toolbar_placeholder_name">Kunde:</string>
    <string name="map_frag_bs_contract_input_button_add_new">Schaden hinzufügen</string>
    <string name="map_frag_bs_contract_input_button_view_dcs">Schadensliste anzeigen</string>
    <string name="map_frag_bs_toast_input_button_add_but_contract_not_saved">Bitte den Vertrag zuerst speichern … </string>

    <!-- https://www.transparent-beraten.de/agrarversicherung/ -->
    <string-array name="damages">
        <item>Betriebshaft</item>
        <item>Gebäude</item>
        <item>Hagel</item>
        <item>Maschinen</item>
        <item>Inhalt</item>
        <item>Ertragsschaden</item>
        <item>Ertragsausfall</item>
        <item>Erntehelfer</item>
    </string-array>

    <string name="listview_damagecase_item_location">Ort:</string>
    <!-- list view - multi selection - title bar -->
    <string name="listview_contract_multiselection_contract_singular">Vertrag</string>
    <string name="listview_contract_multiselection_contract_plural">Verträge</string>
    <string name="listview_contract_multiselection_chosen">ausgewählt</string>
    
    <!-- list view - multi selection - sharing -->
    <string name="listview_contract_dialog_sharing_header">Verträge exportieren …</string>
    <string name="listview_contract_dialog_sharing_plain_text">Klartext</string>
    <string name="listview_contract_dialog_sharing_as_json">JSON-Datei</string>
    <string name="listview_contract_dialog_sharing_as_text">Text</string>
    <string name="listview_contract_dialog_sharing_abort">Abbrechen</string>
    <string name="listview_contract_dialog_deleting_title">Verträge löschen</string>
    <string name="listview_contract_dialog_deleting_message">Möchten Sie die Verträge und alle zugehörige Schadensfälle löschen?</string>
    <string name="listview_contract_dialog_deleting_do_delete">Löschen</string>
    <string name="listview_contract_dialog_deleting_do_not_delete">Abbrechen</string>

    <!-- list view - multi selection - sharing as text -->
    <string name="contract_export_util_format_1_long">-------------------------</string>
    <string name="contract_export_util_format_1_short">-----</string>
    <string name="contract_export_header">Versicherung</string>
    <string name="contract_export_policyholder">Versicherungsnehmer</string>
    <string name="contract_export_name">Versicherungsname</string>
    <string name="contract_export_location">Ort</string>
    <string name="contract_export_date">Datum</string>
    <string name="contract_export_size">Versicherungsfläche</string>
    <string name="contract_export_damagetypes">Versichert:</string>

    <!-- list view - multi selection - sharing as json -->
    <string name="contract_export_json_file_name_date_pattern">yyyyMMddHHmmss.SSS</string>
    <string name="contract_export_json_succesful">Erfolgreich gespeichert unter </string>
    <string name="contract_export_json_unsuccesful">Fehler beim Speichern</string>

    <string name="about_fragment_contributor_header">Entwicklerteam</string>
    <string name="about_fragment_contributor_1">Alexander Zeising</string>
    <string name="about_fragment_contributor_2">Alexander Zeck</string>
    <string name="about_fragment_contributor_3">Elias Müller</string>
    <string name="about_fragment_contact_header">Kontakt</string>
    <string name="about_fragment_contact_message">Sie haben Fragen oder brauchen Hilfe?</string>
    <string name="about_fragment_contact_message_email">Email senden</string>
    <string name="about_fragment_contact_chooser_title">Send Feedback/Help (Email)</string>
    <string name="about_fragment_contact_email_subject">Feedback/Help</string>
    <string name="about_fragment_contact_address">st108477@stud.uni-stuttgart.de</string>
    <string name="about_fragment_licence_header">Lizenz</string>
    <string name="about_fragment_licence">Apache License 2.0</string>
    <string name="about_fragment_licence_message">Im Browser anzeigen</string>
    <string name="about_fragment_licence_url">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_fragment_version_header">Version</string>
    <string name="about_fragment_version">1.0</string>

    <string name="preference_map_category_title">Map</string>
    <string name="preference_map_key">map_view_type</string>
    <string-array name="preferences_map_view">
        <item>Satellit</item>
        <item>Hybrid</item>
        <item>Straße</item>
    </string-array>
    <string name="preferences_map_view_default_value">2</string>
    <string-array name="preferences_map_view_values">
        <item>2</item>
        <item>4</item>
        <item>1</item>
    </string-array>
    <!--public static final int MAP_TYPE_NONE = 0;-->
    <!--public static final int MAP_TYPE_NORMAL = 1;-->
    <!--public static final int MAP_TYPE_SATELLITE = 2;-->
    <!--public static final int MAP_TYPE_TERRAIN = 3;-->
    <!--public static final int MAP_TYPE_HYBRID = 4;-->

    <string name="preferences_map_view_title">Karte</string>
    <string name="preferences_map_view_summary">Wahl zwischen Satelliten-, Hybrid- oder Straßenansicht</string>


</resources>
