<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:id="@+id/user_card"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="6dp"
                                    android:clickable="false"
                                    android:focusable="false"
                                    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="45dp"
                android:layout_height="45dp">

            <ImageView
                    android:id="@+id/view_user_image"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/view_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:layout_marginBottom="0dp"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/view_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:lines="1"
                    android:layout_marginBottom="4dp"
                    android:textSize="14sp"/>

            <TextView
                    android:id="@+id/view_user_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rolle"
                    android:textStyle="bold|italic"
                    android:lines="1"
                    android:layout_marginBottom="6dp"
                    android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/view_user_contract_btn"
                    android:src="@drawable/ic_attach_money_black_24dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/view_user_damages_btn"
                        android:src="@drawable/ic_menu_list"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>