...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_authentication_demo_modus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            android:gravity="bottom|center"
            android:padding="10dp"
            android:text="Demo Modus"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
...
