<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
                android:id="@+id/action_save_profile"
                android:enabled="false"
                android:icon="@drawable/ic_save_white_24dp"
                android:title=""
                app:showAsAction="ifRoom" />
        <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_swap_horiz_white_24dp"
                android:title="@string/profile_activity_logout"
                app:showAsAction="ifRoom"/>
    </group>


</menu>